Task 67654: Add value

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -370,7 +370,36 @@ en:
       stt: "STT"
       name: "Project's name"
       action: "Detail"
+      new_project_features: "New features"
+    create_success: "Create success"
+    create_fail: "Create fail"
+    can_not_find_project: "Can not find project"
+    new:
+      effort_saved_total: "Total hours saved per month"
+      man_month_total: "Total man/month"
+      man_month: "man/month"
+      submit: "Submit"
+      month: "Month"
+      project_name: "Project name"
+      select_project: "--Select project--"
+      project_features: "Project's features"
+    project_feature_fields:
+      every_day: "Every day"
+      every_week: "Every week"
+      every_month: "Every month"
+      every_quarter: "Every quarter"
+      every_year: "Every year"
+      once_every_half_a_year: "Once every half a year"
+      remove: "Remove"
+      name: "Name"
+      description: "Description"
+      waste_description: "Waste description"
+      effort_saved: "Effort saved"
+      repeat_time: "Repeat time"
+      repeat_unit: "Repeat unit"
+      select_option: "--Select option--"
   validates:
     errors:
       month: "Invalid month"
       year: "Invalid year"
+  message_valid_month_year: "Must be in the format 'YYYY-MM'"
