--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -370,6 +370,35 @@ jp:
       stt: "番号順"
       name: "プロジェクト名"
       action: "詳細"
+      new_project_features: "新機能"
+    create_success: "成功を生み出す"
+    create_fail: "作成失敗"
+    can_not_find_project: "プロジェクトが見つかりません"
+    new:
+      man_month_total: "延べ人数/月"
+      man_month: "人/月"
+      submit: "保存"
+      month: "月"
+      project_name: "プロジェクト名"
+      select_project: "--プロジェクトの選択--"
+      project_features: "プロジェクトの特徴"
+      effort_saved_total: "1 か月あたりに節約された合計時間数"
+    project_feature_fields:
+      every_day: "毎日"
+      every_week: "毎週"
+      every_month: "毎月"
+      every_quarter: "四半期ごとに"
+      every_year: "毎年"
+      once_every_half_a_year: "半年に1回"
+      remove: "消去"
+      name: "名前"
+      description: "機能の説明"
+      waste_description: "未使用時の説明"
+      effort_saved: "時間の節約"
+      repeat_time: "時間は繰り返す"
+      repeat_unit: "繰り返し単位"
+      select_option: "--オプションを選択--"
+  message_valid_month_year: "「YYYY-MM」の形式にする必要があります"
   validates:
     errors:
       month: "無効な月です"
