--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -370,6 +370,35 @@ vi:
       stt: "STT"
       name: "Tên dự án"
       action: "Chi tiết"
+      new_project_features: "Tính năng mới"
+    create_success: "Create success"
+    create_fail: "Create fail"
+    can_not_find_project: "Can not find project"
+    new:
+      man_month_total: "Tổng số người/tháng"
+      man_month: "người/tháng"
+      submit: "Lưu"
+      month: "Tháng"
+      project_name: "Tên dự án"
+      select_project: "--Chọn dự án--"
+      project_features: "Tính năng của dự án"
+      effort_saved_total: "Tổng số giờ tiết kiệm trên tháng"
+    project_feature_fields:
+      every_day: "mỗi ngày"
+      every_week: "mỗi tuần"
+      every_month: "mỗi tháng"
+      every_quarter: "mỗi quý"
+      every_year: "mỗi năm"
+      once_every_half_a_year: "nửa năm 1 lần"
+      remove: "Xóa"
+      name: "Tên"
+      description: "Mô tả tính năng"
+      waste_description: "Mô tả khi không sử dụng"
+      effort_saved: "Số giờ tiết kiệm"
+      repeat_time: "Thời gian lặp lại"
+      repeat_unit: "Đơn vị lặp"
+      select_option: "--Chọn tùy chọn--"
+  message_valid_month_year: "Phải ở định dạng 'YYYY-MM'"
   validates:
     errors:
       month: "Tháng không hợp lệ"
