--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -79,13 +79,15 @@ jp:
       search_by_name: "名前で検索"
       export_report: "レポートのエクスポート"
       share: "共有"
+      date_invalid: "日付形式が無効です"
+      new_resource: "新しいリソース"
+    table:
       order: "番号順"
       project_name: "プロジェクト名"
       man_month: "万/月"
       detail: "詳細"
       date: "日付"
-      date_invalid: "日付形式が無効です"
-      new_resource: "新しいリソース"
+      action: "行動"
     new:
       select_project: "プロジェクトを選択"
       date: "日付を選択してください"
@@ -247,9 +249,9 @@ jp:
       description: "説明"
       action: "アクション"
     search_form:
-      date_report: "当日のレポート:"
-      name: "プロジェクト名:"
-      status: "状態:"
+      date_report: "当日のレポート"
+      name: "プロジェクト名"
+      status: "状態"
       search: "検索"
       new_report: "新しいレポート"
     destroy:
@@ -295,6 +297,13 @@ jp:
       name: "プロジェクト名"
       status: "状態"
       new_release_plan: "新作リリース予定"
+    release_plan_detail:
+      project_name: "プロジェクト名:"
+      creator: "クリエイター:"
+      email: "メール:"
+      date: "発売予定日:"
+      description: "説明:"
+      status: "状態:"
   project_user:
     create_success: "メンバーの追加が成功しました!"
     create_fail: "新しいメンバーの追加に失敗しました!"
