--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -443,3 +443,13 @@ vi:
     new:
       checklist: "Danh sách checklist"
     validate_filled: "Hãy điền đầy đủ thông tin"
+  value_resources:
+    index:
+      value: "Giá trị"
+      resource: "Nguồn lực"
+      diff: "Khác biệt"
+      total_year: "Tổng cả năm"
+      total_value_year: "Tổng giá trị %{month} tháng"
+      total_resource_year: "Tổng tài nguyên %{month} tháng"
+      total_diff_year: "Tổng chênh lệch %{month} tháng"
+      total: "Tổng"
